--- a/package.json
+++ b/package.json
@@ -10,12 +10,30 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~44.0.0",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "@expo/metro-config": "^0.3.16",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/datetimepicker": "6.1.2",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "expo": "^45.0.3",
+    "expo-image-picker": "~13.1.1",
+    "expo-local-authentication": "~12.2.0",
+    "expo-status-bar": "~1.3.0",
+    "firebase": "^9.8.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.1",
+    "react-native-document-picker": "^8.1.0",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^13.1.2",
+    "react-native-pspdfkit": "github:PSPDFKit/react-native",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
