--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/metro-config": "^0.3.16",
+    "@expo/react-native-action-sheet": "^3.13.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-community/masked-view": "^0.1.11",
@@ -22,18 +23,26 @@
     "expo-local-authentication": "~12.2.0",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.8.1",
+    "firebase-admin": "^10.2.0",
+    "firebase-functions": "^3.21.1",
     "react": "17.0.2",
+    "react-devtools": "^4.24.6",
     "react-dom": "17.0.2",
-    "react-native": "0.68.1",
+    "react-native": "0.68.2",
     "react-native-document-picker": "^8.1.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^13.1.2",
+    "react-native-popup-confirm-toast": "^2.1.1",
     "react-native-pspdfkit": "github:PSPDFKit/react-native",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7"
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-web": "0.17.7",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0",
+    "expo-permissions": "~13.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
