--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "^45.0.3",
     "expo-image-picker": "~13.1.1",
     "expo-local-authentication": "~12.2.0",
+    "expo-permissions": "~13.2.0",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.8.1",
     "firebase-admin": "^10.2.0",
@@ -29,10 +30,14 @@
     "react-devtools": "^4.24.6",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-collapsible": "^1.6.0",
+    "react-native-country-flag": "^1.1.6",
     "react-native-document-picker": "^8.1.0",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^13.1.2",
+    "react-native-paper": "^4.12.1",
     "react-native-popup-confirm-toast": "^2.1.1",
     "react-native-pspdfkit": "github:PSPDFKit/react-native",
     "react-native-reanimated": "~2.8.0",
@@ -40,9 +45,9 @@
     "react-native-screens": "~3.11.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-web": "0.17.7",
+    "react-native-webview": "11.18.1",
     "react-redux": "^8.0.1",
-    "redux": "^4.2.0",
-    "expo-permissions": "~13.2.0"
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
