--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iatatravelpass",
+  "name": "passengertravelpasport",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
